--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="Blanco">#FFE9E9</color>
     <color name="RojoBajo">#F76647</color>
     <color name="Amarillo">#ffff17</color>
+    <color name="Naranja">#ff8000</color>
 
 
 </resources>
