--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/btnIngresar"
         android:layout_width="180dp"
         android:layout_height="81dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         android:text="@string/Ingresar"
         android:textColor="@color/Blanco"
         android:textSize="25sp"
@@ -35,26 +35,34 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <Button
-        android:id="@+id/btnSalir"
-        android:layout_width="180dp"
-        android:layout_height="81dp"
-        android:layout_marginTop="328dp"
-        android:text="@string/Salir"
+        android:id="@+id/btnConferencia"
+        android:layout_width="240dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="56dp"
+        android:text="@string/Conferencia"
         android:textColor="@color/Blanco"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:id="@+id/btnSalir"
+        android:layout_width="180dp"
+        android:layout_height="81dp"
+        android:layout_marginBottom="200dp"
+        android:text="@string/Salir"
+        android:textColor="@color/Blanco"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnConferencia"
+        app:layout_constraintVertical_bias="0.503" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
